--- a/bookEx/templates/base.html
+++ b/bookEx/templates/base.html
@@ -33,6 +33,13 @@
 
     <div class="container">
         <nav class="sidebar">
+
+            <!-- ADD LOGO HERE -->
+            <div class="sidebar-logo">
+                <img src="{% static 'logo.png' %}" alt="Our Logo"/>
+            </div>
+            <!-- END LOGO -->
+
             <ul>
                 {% block sidenav %}
 
