--- a/bookEx/templates/base.html
+++ b/bookEx/templates/base.html
@@ -73,7 +73,7 @@
                    </form>
                 {% else %}
                    Not Logged in
-                   <a href="{% url 'login' %}?next=/">login</a>
+                   <a class="btn btn-primary" href="{% url 'login' %}?next=/" role="button">Login</a>
                 {% endif %}
             </div>
             <!-- END OF PASTED BLOCK -->
