added icon to login

--- a/bookEx/templates/base.html
+++ b/bookEx/templates/base.html
@@ -73,7 +73,7 @@
                    </form>
                 {% else %}
                    Not Logged in
-                   <a class="btn btn-primary" href="{% url 'login' %}?next=/" role="button">Login</a>
+                   <a class="btn btn-primary" href="{% url 'login' %}?next=/" role="button">Login <i class="fa-solid fa-user"></i></a>
                 {% endif %}
             </div>
             <!-- END OF PASTED BLOCK -->
