Added About Us page

--- a/bookEx/templates/base.html
+++ b/bookEx/templates/base.html
@@ -1,6 +1,4 @@
 {% load static %}
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -45,7 +43,7 @@
 
             <!-- LOGO -->
             <div class="sidebar-logo">
-                <img src="{% static 'logo.png' %}" alt="Our Logo"/>
+                <img src="{% static 'logo.png' %}" alt="Our Logo" width="150"/>
             </div>
 
 
