--- a/bookEx/templates/bookMng/cart.html
+++ b/bookEx/templates/bookMng/cart.html
@@ -33,6 +33,12 @@
     </tr>
   </table>
 
+  <form action="{% url 'purchase_books' %}" method="post">
+  {% csrf_token %}
+  <button type="submit" class="btn btn-success">Purchase</button>
+  </form>
+
+
 {% else %}
   <p>Your cart is empty.</p>
 {% endif %}
