added features to my books
shows the name of the book, the price paid for the book, the purchase date, the rating the logged in user gave the book, and a view details button to view all the information of the book and allowing the user to readjust the rating and add comments.

--- a/bookEx/templates/bookMng/mybooks.html
+++ b/bookEx/templates/bookMng/mybooks.html
@@ -1,40 +1,40 @@
 {% extends "base.html" %}
 {% load static %}
 
-<!-- Remove every page dealing with the sidenav independently -->
-
 {% block content %}
    <h1>My Books</h1>
-   <table border="2" >
+   <table border="2">
       <tr>
-          <th>
-              Book Name
-          </th>
-          <th>
-              Book Price
-          </th>
-          <th>
-              User Name
-          </th>
-          <th>
-              Rating
-          </th>
+          <th>Book Name</th>
+          <th>Book Price</th>
+          <th>Purchase Date</th>
+          <th>Your Rating</th>
+          <th>Actions</th>
       </tr>
-   {% for book in books %}
+   {% for owned in owned_books %}
        <tr>
          <td>
-        <a href="book_detail/{{ book.id }}">  {{ book.name }} </a>
+           <a href="{% url 'owned_book_detail' owned.book.id %}">{{ owned.book.name }}</a>
          </td>
          <td>
-            {{ book.price }}
+           ${{ owned.book.price }}
          </td>
-          <td>
-            {{ book.username }}
+         <td>
+           {{ owned.purchase_date|date:"M d, Y" }}
          </td>
-           <td>
-               {{ book.rate}}
-           </td>
+         <td>
+           {% if owned.rating %}
+             {{ owned.rating }}
+             {% else %}
+             <i>Not rated</i>
+             {% endif %}
+         </td>
+         <td>
+           <a class="btn btn-sm btn-outline-info" href="{% url 'owned_book_detail' owned.book.id %}">View Details</a>
+         </td>
       </tr>
+   {% empty %}
+      <tr><td colspan="5">You haven't purchased any books yet.</td></tr>
    {% endfor %}
    </table>
 {% endblock content %}
