--- a/bookEx/templates/registration/login.html
+++ b/bookEx/templates/registration/login.html
@@ -14,12 +14,15 @@
          {{ form.as_table }}
           <tr>
              <td>
-                 <input type="submit" value="login">
+                 <input type="submit" value="Login">
              </td>
           </tr>
       </table>
         <p>
-            To register
+            <br>
+            Don't have an account? Register for one below, it's fast and easy!
+            <br>
+            <a class="btn btn-primary" href="{% url 'register' %}?next=/" role="button">Register</a>
         </p>
 
       <input type="hidden" name="next" value="{{ next }}" />
