Clickable logo in base.html
Clicking the logo redirects the user to the home page.

--- a/bookEx/templates/base.html
+++ b/bookEx/templates/base.html
@@ -43,7 +43,9 @@
 
             <!-- LOGO -->
             <div class="sidebar-logo">
+                <a href="/" target="_self">
                 <img src="{% static 'logo.png' %}" alt="Our Logo" width="150"/>
+                </a>
             </div>
 
 
