--- a/bookEx/templates/bookMng/purchase_success.html
+++ b/bookEx/templates/bookMng/purchase_success.html
@@ -2,14 +2,35 @@
 {% load static %}
 
 {% block content %}
-<h2>Purchase Complete!</h2>
-<p>You’ve successfully purchased the following book(s):</p>
+<div class="d-flex justify-content-center mt-5">
+  <div class="p-4 bg-white rounded shadow-sm" style="max-width: 500px; width: 100%;">
 
-<ul>
-  {% for book in books %}
-    <li>{{ book.name }} - ${{ book.price }}</li>
-  {% endfor %}
-</ul>
+    <h3 class="text-success text-center mb-3">
+      <i class="fas fa-check-circle"></i> Purchase Complete!
+    </h3>
+    <p class="text-center">Thank you for your purchase. Here's your receipt:</p>
 
-<a class="btn btn-primary" href="{% url 'mybooks' %}">Go to My Books</a>
+    <hr>
+
+    <ul class="list-unstyled mb-4">
+      {% for book in books %}
+        <li class="d-flex justify-content-between py-2 border-bottom">
+          <span>{{ book.name }}</span>
+          <span>${{ book.price }}</span>
+        </li>
+      {% endfor %}
+    </ul>
+
+    <div class="d-flex justify-content-between fw-bold border-top pt-2 mb-4">
+      <p class="mt-2"><strong>Total:</strong> ${{ subtotal }}</p>
+    </div>
+
+    <div class="text-center">
+      <a href="{% url 'mybooks' %}" class="btn btn-outline-success">
+         Go to My Books
+      </a>
+    </div>
+
+  </div>
+</div>
 {% endblock %}
