--- a/bookEx/templates/base.html
+++ b/bookEx/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Layout with Banner, Menu, and Content</title>
+    <title>BookEx</title>
     <!-- Bootstrap 3 CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'base.css' %}" type="text/css">
@@ -95,7 +95,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 My Web Layout</p>
+        <p>BookEx &copy; 2025</p>
     </footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins in v3/4) -->
