--- a/bookEx/templates/registration/register_success.html
+++ b/bookEx/templates/registration/register_success.html
@@ -3,12 +3,12 @@
 
 {% block sidenav %}
       <li>
-        <a href="/">  Home </a>
+        <a href="/" >  Home </a>
       </li>
 {% endblock sidenav %}
 
 {% block content %}
-  <h1>User Registration Success!</h1>
+  <h1 style="font-family:'Brush Script MT', cursive;" >User Registration Success!</h1>
   <p>
       To login <a href="{% url 'login' %}?next=/"> Click Here</a>
   </p>
