--- a/bookEx/templates/bookMng/about_us.html
+++ b/bookEx/templates/bookMng/about_us.html
@@ -3,25 +3,27 @@
 
 {% block content %}
 <div class="text-centered">
-    <h1 class="mb-4"> About Us</h1>
+    <h1 class="mb-4" style="font-family:'Brush Script MT', cursive;"> About Us</h1>
 
-    <p class="lead">Welcome to BookEx. A digital space built for readers by readers.</p>
+    <p class="lead" style="font-family:'Brush Script MT', cursive;">Welcome to BookEx. A digital space built for readers by readers.</p>
 
     <hr class="my-4">
 
-    <h3>🌟 Our Mission</h3>
-    <p>We aim to make reading more accessible by allowing users to post, browse, and review books. Whether you're looking to share a hidden gem or discover your next favorite title, BookEx makes it easy to connect with fellow readers.</p>
+    <h3 style="font-family:'Brush Script MT', cursive;">🌟 Our Mission</h3>
+    <p style="font-family:'Brush Script MT', cursive;">We aim to make reading more accessible by allowing users to post, browse, and review books. Whether you're looking to share a hidden gem or discover your next favorite title, BookEx makes it easy to connect with fellow readers.</p>
 
-    <h3>🎯 Our Goals</h3>
+    <h3 style="font-family:'Brush Script MT', cursive;">🎯 Our Goals</h3>
     <ul>
-        <li>Encourage sustainable reading through sharing.</li>
-        <li>Build a trusted platform for exchanging quality books.</li>
-        <li>Foster an inclusive space for feedback and discussion.</li>
+        <li style="font-family:'Brush Script MT', cursive;" >Encourage sustainable reading through sharing.</li>
+        <li style="font-family:'Brush Script MT', cursive;" >Build a trusted platform for exchanging quality books.</li>
+        <li style="font-family:'Brush Script MT', cursive;">Foster an inclusive space for feedback and discussion.</li>
     </ul>
 
-    <h3>🤝 Community</h3>
-    <p>BookEx thrives on user contributions; every book posted, review submitted, and rating shared helps someone else find their next great read. We welcome all book lovers to grow our community through kindness, curiosity, and a shared love of reading.</p>
+    <h3 style="font-family:'Brush Script MT', cursive;">🤝 Community</h3>
+    <p style="font-family:'Brush Script MT', cursive;">BookEx thrives on user contributions; every book posted, review submitted, and rating shared helps someone else find their next great read. We welcome all book lovers to grow our community through kindness, curiosity, and a shared love of reading.</p>
 
-    <p class="mt-4 text-muted"><em>Thank you for being a part of our journey.</em></p>
+    <p class="mt-4 text-muted" style="font-family:'Brush Script MT', cursive;"><em>Thank you for being a part of our journey.</em></p>
 </div>
+
+<img src="Book_Community.jpg" alt="BookC">
 {% endblock content %}
