--- a/bookEx/templates/bookMng/cart.html
+++ b/bookEx/templates/bookMng/cart.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="text-center">
-  <h1 class="mb-4">🛒 My Shopping Cart</h1>
+  <h1 class="mb-4" style="font-family:'Brush Script MT', cursive;">🛒 My Shopping Cart</h1>
 
   {% if books %}
     <div class="row justify-content-center">
