--- a/bookEx/templates/bookMng/purchase_success.html
+++ b/bookEx/templates/bookMng/purchase_success.html
@@ -6,7 +6,7 @@
   <div class="p-4 bg-white rounded shadow-sm" style="max-width: 500px; width: 100%;">
 
     <h3 class="text-success text-center mb-3">
-      <i class="fas fa-check-circle"></i> Purchase Complete!
+      <i class="fas fa-check-circle" style="font-family:'Brush Script MT', cursive;"></i> Purchase Complete!
     </h3>
     <p class="text-center">Thank you for your purchase. Here's your receipt:</p>
 
