--- a/bookEx/templates/registration/login.html
+++ b/bookEx/templates/registration/login.html
@@ -8,7 +8,7 @@
 {% endblock sidenav %}
 
 {% block content %}
-  <h1>User Login</h1>
+  <h1 style="font-family:'Brush Script MT', cursive;" >User Login</h1>
     <form action="{% url 'login' %}" method="post">
       <table>
          {{ form.as_table }}
