updating UI for cards

--- a/bookEx/templates/bookMng/about_us.html
+++ b/bookEx/templates/bookMng/about_us.html
@@ -25,5 +25,5 @@
     <p class="mt-4 text-muted" style="font-family:'Brush Script MT', cursive;"><em>Thank you for being a part of our journey.</em></p>
 </div>
 
-<img src="Book_Community.jpg" alt="BookC">
+<img src= "{% static 'Book_Community' %}" alt="BookC">
 {% endblock content %}
