--- a/bookEx/static/base.css
+++ b/bookEx/static/base.css
@@ -217,3 +217,12 @@ a[role=button]{
     background-color: purple;
 
 }
+
+.card{
+    background-color: #f9f9f9;
+    border: 1px solid white;
+    margin-bottom: 1px;
+    padding: 15px;
+    border-radius: 5px;
+
+}
