fixed image in about us section

--- a/bookEx/static/base.css
+++ b/bookEx/static/base.css
@@ -226,3 +226,9 @@ a[role=button]{
     border-radius: 5px;
 
 }
+
+.community_image img{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+}
