--- a/bookEx/templates/bookMng/about_us.html
+++ b/bookEx/templates/bookMng/about_us.html
@@ -24,6 +24,7 @@
 
     <p class="mt-4 text-muted" style="font-family:'Brush Script MT', cursive;"><em>Thank you for being a part of our journey.</em></p>
 </div>
+<div class = "community_image">
+    <img src="{% static 'uploads/Book_Community.jpg' %}" alt="BookC">{% endblock content %}
+</div>
 
-<img src= "{% static 'Book_Community' %}" alt="BookC">
-{% endblock content %}
